Updated to Java 25 with toolchains, JNA 5, Log4J2, JUnit 6, Hamcrest 3; Added Maven Wrapper